--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "3.8.10"
 django = "^4.2.10"  
 djangorestframework = "^3.14.0"
+psycopg = "^3.1.18"
+psycopg2 = "^2.9.9"
 
 [build-system]
 requires = ["poetry-core"]
